<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.franjo.android.bakingapp.presentation.StepDetailFragment">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/mPlayerView"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/thumbImage"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/no_video_image"
            android:adjustViewBounds="true"
            tools:targetApi="lollipop" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvStepsDescription"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mPlayerView" >

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_description_step_detail"
                tools:text="Description" />

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/btnPrevious"
                style="@style/button"
                android:contentDescription="@string/previousvideobutton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/previous"
                tools:ignore="RtlCompat" />

            <Button
                android:id="@+id/btnNext"
                style="@style/button"
                android:contentDescription="@string/nextvideobutton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/next"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>
